Add redirect tests for all unsafe schemes

This should match the behavior of IsSafeRedirectTarget for the
ProtocolHandler for these schemes.

Bug: 894480
Change-Id: Id52b94740c2fa488b163b0862be61e4805918072
Reviewed-on: https://chromium-review.googlesource.com/c/1277785
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: Clark DuVall <cduvall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598985}
Former-commit-id: da29c7f2a3be80010b0f379b075628b1b8adfd6f