content/public/common/url_utils.cc
@@ -114,8 +114,11 @@ bool IsRendererDebugURL(const GURL& url) {
 bool IsSafeRedirectTarget(const GURL& from_url, const GURL& to_url) {
   static base::NoDestructor<std::set<std::string>> kUnsafeSchemes(
       std::set<std::string>({
-          url::kAboutScheme, url::kDataScheme, url::kFileScheme,
-          url::kFileSystemScheme,
+        url::kAboutScheme, url::kDataScheme, url::kFileScheme,
+            url::kFileSystemScheme,
+#if defined(OS_ANDROID)
+            url::kContentScheme,
+#endif
       }));
   if (HasWebUIScheme(to_url))
     return false;
